# youtube_jeremy_axum_full_course

./: Cargo.toml  README.md
.cargo/: config.toml
src/: context.rs  error.rs  log.rs  main.rs  model.rs
src/web/: mw_auth.rs  routes_login.rs  routes_tickets.rs
tests/: api_login.rs  api_ticket.rs  quick_dev.rs
