[package]
name = "tutorial_youtube_jeremy"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.6.20"
serde = { version = "1.0.192", features = ["derive"] }
serde_json = "1.0.108"
tokio = { version = "1.34.0", features = ["full"] }
tower-http = { version = "0.4.4", features = ["fs"] }
tower-cookies = "0.9.0"
lazy-regex = "3.1.0"
strum_macros = "0.25.3"
uuid = { version = "1.5.0", features = ["v4", "fast-rng"] }
serde_with = "3.4.0"


[dev-dependencies]
anyhow = "1.0.75"
httpc-test = "0.1.1"
